# 2025-github-website-demo

./: .gitignore  .nojekyll  README.md  _quarto.yml  about.html  dashboard.html  dashboard.qmd  index.html  index.qmd  justfile  pyproject.toml  robots.txt  search.json  setup.html  setup.md  setup.qmd  sitemap.xml
.github/workflows/: publish.yml
site_libs/bootstrap/: bootstrap-40e1344e40a86858eb1b548754442ba3.min.css  bootstrap-e74f627bb7c5f9860b11474a0d754c49.min.css
src/quarto_dashboards/: __init__.py
