[project]
name = "quarto-dashboards"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nicholas Minor", email = "nicholasrminor@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "labkey>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
